--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=`">
+    <meta name="viewport" content="width=device-width, initial-scale=">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
@@ -41,11 +41,14 @@
             </div>
             <div class="total">
                 <div class="total__title">Total</div>
-                <div class="total__title">$0</div>
+                <div class="total__price">$0</div>
             </div>
             <button class="btn-buy" type="button">Button</button>
         </div>
     </header>
+
 </body>
+
+<script src="main.js"></script>
 
 </html>
