--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
             <button class="btn-buy" type="button">Button</button>
         </div>
     </header>
+<!-- NAVIGATION END -->
 
+<!-- DATA LIST -->
+<div class="merchandise__section">
+    <div class="merchandise__container">
+        <!-- menggunakan data List -->
+       
+    </div>
+</div>
 </body>
 
 <script src="main.js"></script>
